# csv-align

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.factory/: init.sh  services.yaml
.factory/research/: deps-2026-04.md
.factory/skills/frontend-worker/: SKILL.md
.factory/skills/fullstack-worker/: SKILL.md
.factory/skills/release-worker/: SKILL.md
.factory/skills/rust-worker/: SKILL.md
.factory/validation/m1-tooling/scrutiny/: synthesis.json
.factory/validation/m1-tooling/user-testing/: synthesis.json
.factory/validation/m2-deps/scrutiny/: synthesis.json
.factory/validation/m2-deps/user-testing/: synthesis.json
.factory/validation/m3-typed-errors-dedup/scrutiny/: synthesis.json
.github/workflows/: ci.yml  release.yml
benches/: flexible_key_matching.rs
docs/: auto-pairing.md  cleanup-review.md  codebase-improvement-plan.md  releasing.md
docs/plans/: app-shell-visual-polish-2026-05-11.md  app-store-connect-api-release-auth-2026-05-09.md  ci-release-efficiency-2026-05-09.md  codebase-quality-simplicity-review-2026-06-16.md  deb-build-signing-2026-05-09.md  duplicate-results-exclude-mismatches-2026-05-15.md  github-hosted-apt-setup-install-2026-05-10.md  html-export-app-visual-parity-2026-05-09.md  linux-deb-license-metadata-2026-05-09.md  result-column-scoped-search-2026-05-18.md  wildcard-key-matching-2026-05-11.md
docs/reviews/: codebase-improvement-review-2026-06-14.md  github-hosted-apt-setup-install-plan-critique-2026-05-10.md  linux-deb-license-metadata-plan-critique-2026-05-09.md  result-column-scoped-search-plan-critique-2026-05-18.md  wildcard-key-matching-plan-critique-2026-05-11.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.file-selection-navigation.test.tsx  App.overlap-results.test.tsx  App.results-navigation.test.tsx  App.saved-result-ux.test.tsx  App.tsx  App.upload-navigation.test.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: FileSelector.test.tsx  FileSelector.tsx  FileUpload.tsx  FilterBar.test.tsx  FilterBar.tsx  MappingConfig.auto-pair.test.tsx  MappingConfig.json-fields.test.tsx  MappingConfig.test.tsx  MappingConfig.tsx  ResultsTable.test.tsx  ResultsTable.tsx  SummaryStats.test.tsx  SummaryStats.tsx
frontend/src/config/: normalization.test.ts  normalization.ts
frontend/src/hooks/: useComparisonWorkflow.auto-pair.test.ts  useComparisonWorkflow.json-fields.test.ts  useComparisonWorkflow.pair-order.test.ts  useComparisonWorkflow.reducer.test.ts  useComparisonWorkflow.reducer.ts  useComparisonWorkflow.snapshot-read-only.test.ts  useComparisonWorkflow.snapshot.test.ts  useComparisonWorkflow.test.ts  useComparisonWorkflow.ts  useThemePreference.ts  useWorkflowComparisonActions.ts  useWorkflowNavigation.ts  useWorkflowPersistenceActions.ts  useWorkflowSessionLifecycle.ts
frontend/src/services/: api.ts  apiRoutes.ts  appWindows.test.ts  appWindows.ts  browserDownload.ts  contracts.ts  http.ts  tauri.comparison-snapshot.test.ts  tauri.test.ts  tauri.ts  tauriCommands.ts
frontend/src/test/: fixtures.tsx
frontend/src/types/: api.ts  ui.ts
frontend/src/utils/: selectedFileSource.ts
samples/: file_a.csv  file_b.csv
scripts/: build_apt_repository.py  build_frontend_for_tauri.sh  build_rpm_package.py  check_release_metadata.py  install-apt-repo.sh  normalize_linux_deb_desktop_id.py  validate_linux_deb_metadata.py
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  Entitlements.plist  generate-icons.sh  tauri.conf.json
src-tauri/appstream/: com.csvalign.desktop.metainfo.xml
src-tauri/capabilities/: default.json
src-tauri/debian/: copyright
src-tauri/icons/: icon.icns
src-tauri/linux/: com.csvalign.desktop.desktop
src-tauri/src/: commands.rs  comparison_snapshot_tests.rs  main.rs  pair_order_tests.rs  test_support.rs  tests.rs
src/api/: app.rs  handlers.rs  mod.rs  state.rs
src/backend/: comparison_snapshot.rs  comparison_snapshot_tests.rs  error.rs  mod.rs  pair_order.rs  requests.rs  session.rs  store.rs  tests.rs  validation.rs  workflow.rs
src/comparison/: engine.rs  mapping.rs  mod.rs  rows.rs  value_compare.rs
src/data/: csv_loader.rs  export.rs  json_fields.rs  mod.rs  types.rs
src/presentation/: mod.rs  responses.rs
src/ui/: app.rs  config_panel.rs  export_dialog.rs  mod.rs  results_panel.rs
tests/: backend_workflow_integration.rs  cleanup_settings_normalization_integration.rs  comparison_engine_integration.rs  comparison_public_api_integration.rs  comparison_snapshot_persistence_integration.rs  comparison_snapshot_router_integration.rs  comparison_snapshot_zero_results_integration.rs  csv_loader_integration.rs  export_integration.rs  json_virtual_fields_integration.rs  json_virtual_fields_persistence_integration.rs  key_validation_integration.rs  linux_package_metadata_integration.rs  local_file_loading_integration.rs  mapping_auto_pair_integration.rs  mapping_instance_integration.rs  mapping_integration.rs  module_root_public_api_integration.rs  nullish_key_handling_integration.rs  pair_order_persistence_integration.rs  presentation_responses_integration.rs  release_metadata_script_integration.rs  response_contracts.rs  session_store_integration.rs  transport_parity_integration.rs  web_runtime_bootstrap_integration.rs
tests/common/: mod.rs
(+111 files in other folders)
