[package]
name = "csv-align"
version = "1.2.3"
edition = "2021"
description = "CSV file comparison tool with modern web UI"
license = "MIT"

[dependencies]
# Core dependencies
csv = "1.3"
encoding_rs_io = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
strsim = "0.10"  # String similarity for column matching
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Web server dependencies
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "csv-align"
path = "src/main.rs"

[lib]
name = "csv_align"
path = "src/lib.rs"
