[package]
name = "csv-align"
version = "2.1.61"
edition = "2024"
description = "CSV file comparison tool with modern web UI"
license = "MIT"

[dependencies]
# Core dependencies
csv = "1.3"
encoding_rs_io = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.44", default-features = false, features = ["std"] }
strsim = "0.11"  # String similarity for column matching
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
anyhow = "1.0"

# Web server dependencies
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1.23.1", features = ["v4"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
name = "csv-align"
path = "src/main.rs"

[lib]
name = "csv_align"
path = "src/lib.rs"
