[package]
name = "csv-align"
version = "2.1.98"
edition = "2024"
description = "CSV file comparison tool with modern web UI"
license = "MIT"

[dependencies]
# Core dependencies
csv = "1.4.0"
encoding_rs_io = "0.1.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
strsim = "0.11.1"  # String similarity for column matching
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
thiserror = "2.0.18"

# Web server dependencies
axum = { version = "0.8.9", features = ["multipart"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "sync"] }
tower-http = { version = "0.7.0", features = ["cors", "fs"] }
uuid = { version = "1.23.3", features = ["v4"] }
parking_lot = "0.12.5"

[dev-dependencies]
tempfile = "3.27.0"
criterion = "0.5"
tower = { version = "0.5.3", features = ["util"] }

[[bench]]
name = "flexible_key_matching"
harness = false

[[bin]]
name = "csv-align"
path = "src/main.rs"

[lib]
name = "csv_align"
path = "src/lib.rs"
