[package]
name = "csv-align-app"
version = "2.1.97"
edition = "2024"
description = "CSV file comparison desktop application"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = "2.11.2"
tauri-plugin-dialog = "2.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v4"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

# Import our core library for comparison logic
csv-align = { path = ".." }

[dev-dependencies]
tauri = { version = "2.11.2", features = ["test"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
